Fixed bug where test cases weren't working properly based on week of month index. Added changelog notation for new Lingo functionality (to-be-integrated).

--- a/trunk/CHANGES.txt
+++ b/trunk/CHANGES.txt
@@ -4,6 +4,11 @@
 p4a.ploneevent Changes
 ======================
 
+(2009-07-11)
+============
+* Implemented Lingo functionality for daily, weekly, monthly, and yearly recurrences (but not wired up to anything yet).
+  [dlh]
+
 p4a.ploneevent 0.6 (2009-07-02)
 ===============================
 
