--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,12 @@
 p4a.ploneevent Changes
 ======================
 
+p4a.ploneevent 0.7 (2009-08-26)
+===============================
+
+* Translations to Swedish and Norwegian. (regebro)
+
+
 p4a.ploneevent 0.6 (2009-05-17)
 ===============================
 
