removed occurrence_view since Dorneles' integration with plain EventView was more elegant; changed EventView for occurrence to use ordinal date passed in query string; added GS metadata; added override of dateable's event display to be able to add query parameter to urls displayed on calendars (note: requires addition of zcml slug to package-includes via buildout or otherwise); updated egg version to 0.7 and added CHANGES notes; added functional test coverage for occurrence start date in event view; added instructions for overrides.zcml to README.txt

--- a/trunk/CHANGES.txt
+++ b/trunk/CHANGES.txt
@@ -4,10 +4,36 @@
 p4a.ploneevent Changes
 ======================
 
+p4a.ploneevent 0.7 (2009-09-07)
+===============================
+
+* Reworked support for occurrence views, which are views on a recurring event 
+  that display the correct date and time information for that occurrence, 
+  to use ordinal date passed in query string.
+  [bcw]
+  
+* Added event display (as override) for calendars to add the ordinal date of the 
+  occurrence to a query string variable, passed to the new occurrence
+  browserview.
+  [bcw]
+
+* Requires addition of ZCML slug for overrides used in recurrence.browser
+  package.  See README.txt for more information
+  [bcw]
+  
+* Removed repeat by specified day of week, months, and ordinal weeks and instead
+  handle repeating based on day of month and weekday of the event start date.
+  [bcw][dlh]
+
+
 (2009-07-11)
 ============
-* Implemented Lingo functionality for daily, weekly, monthly, and yearly recurrences (but not wired up to anything yet).
+* Implemented Lingo functionality for daily, weekly, monthly, and yearly 
+  recurrences (but not wired up to anything yet).
   [dlh]
+  
+* Moved recurrence fields to default schemata tab.
+  [bcw, dlh]  
 
 p4a.ploneevent 0.6 (2009-07-02)
 ===============================
