--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,11 @@
 p4a.ploneevent Changes
 ======================
 
+p4a.ploneevent 0.7.2 (2009-09-23)
+=================================
+
+* Fixed a bug in viewing of non-recurring events
+
 p4a.ploneevent 0.7.1 (2009-08-29)
 =================================
 
